2018-04-26  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1039

	* CMakeLists.txt:

	Always enable Hitran Xsec code even if the FFTW library is not
	available.

	* src/m_hitran_xsec.cc (abs_xsec_per_speciesAddHitranXsec):

	Output a very clear warning to out0 that computation will extremely
	slow without FFTW.

	Remove implementation of abs_xsec_per_speciesAddHitranXsec that throws
	a runtime-error if FFTW library is not available.

	* src/main.cc (main):

	Adapt output of information about Hitran Xsec support.

	* controlfiles/artscomponents/hitran-xsec/TestHitranXsec.arts:

	Reduce number of pressure levels.

2018-04-26  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1038

	* src/absorption.cc (xsec_species):

	Removed debug output for Theresa Lang. Instead, provided her a patch
	that writes the information directly to a file.

2018-04-24  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1037

	* controlfiles/CMakeLists.txt:

	Only run TestWfunsHybCloudy if RT4 is available.

	* controlfiles/artscomponents/wfuns/TestWfunsHybClear.arts:

	Consistent naming for reference files.

	* controlfiles/artscomponents/wfuns/JHyb_O2_analyticalREFERENCE.xml.gz,
	controlfiles/artscomponents/wfuns/JHyb_O3_analyticalREFERENCE.xml.gz,
	controlfiles/artscomponents/wfuns/JHyb_OtherREFERENCE.xml.gz,
	controlfiles/artscomponents/wfuns/JHyb_T_analyticalREFERENCE.xml.gz,
	controlfiles/artscomponents/wfuns/JHyb_WindsREFERENCE.xml.gz,
	controlfiles/artscomponents/wfuns/yHyb_O3_analyticalREFERENCE.xml.gz:

	Generated reference files.

2018-04-23  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-1036
	
	Fix of error I unknowingly introduced with last commit
	
	* src/absorption.cc: Added line check for LM params.
	
	* src/jacobian.{cc,h}: Added single equivalent index function
	
	* src/rte.{cc,h}: This fixes two broken slow tests
	but arts.ctlfile.slow.artscomponents.wfuns.TestWfunsHybCloudy
	still fails with the error: